* g++.dg/abi/offsetof.C: Fix size comparison.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49487 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-04  Richard Henderson  <rth@redhat.com>
+
+	* g++.dg/abi/offsetof.C: Fix size comparison.
+
 2002-02-04  Richard Sandiford  <rsandifo@redhat.com>
 
 	* gcc.dg/cast-qual-2.c: New test.
