--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-02-04  Bernd Schmidt  <bernds@redhat.com>
+
+	* cfgrtl.c (force_nonfallthru_and_redirect): Don't try to redirect
+	the entry block.
+
 2002-02-04  Richard Henderson  <rth@redhat.com>
 
 	* combine.c (force_to_mode): Remove STACK_BIAS code.
