* pa.md (call_internal_reg_64bit): Remove unused variable.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49491 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-04  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa.md (call_internal_reg_64bit): Remove unused variable.
+
 2002-02-04  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* config/arm/arm.h (machine_function): Add uses_anonymous_args
