--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-04  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
+	* pa32-linux.h (LINK_COMMAND_SPEC): Define.
+
+2002-02-04  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
 	* pa.md (call_internal_reg_64bit): Remove unused variable.
 
 2002-02-04  Nick Clifton  <nickc@cambridge.redhat.com>
