* pa.h (PREFERRED_STACK_BOUNDARY): Define to match standard rounding. 	(BIGGEST_ALIGNMENT): Change to 128.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49496 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-04  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
+	* pa.h (PREFERRED_STACK_BOUNDARY): Define to match standard rounding.
+	(BIGGEST_ALIGNMENT): Change to 128.
+
+2002-02-04  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
 	* pa32-linux.h (LINK_COMMAND_SPEC): Define.
 
 2002-02-04  John David Anglin  <dave@hiauly1.hia.nrc.ca>
