--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* semantics.c (begin_switch_stmt): Clear SWITCH_TYPE.
+	(finish_switch_cond): Set SWITCH_TYPE.
+
 2002-02-04  Richard Henderson  <rth@redhat.com>
 
 	* method.c (use_thunk): Always initialize the block tree.  Reindent.
