--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,12 @@
+2002-02-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/Wswitch.c: Fix typos.  Don't return unconditionally
+	before all tests.  Move warning one line above to match where it
+	C frontend emits.
+	* gcc.dg/Wswitch-2.c: New test.
+	* g++.dg/warn/Wswitch-1.C: New test.
+	* g++.dg/warn/Wswitch-2.C: New test.
+
 2002-02-04  Richard Henderson  <rth@redhat.com>
 
 	* g++.dg/abi/offsetof.C: Fix size comparison.
