* unwind-dw2-fde-glibc.c: Define _GNU_SOURCE if not defined.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49498 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-04  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* unwind-dw2-fde-glibc.c: Define _GNU_SOURCE if not defined.
+
 2002-02-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/4475, c++/3780:
