* pa.c (DO_FRAME_NOTES): Move forward. 	(store_reg): Revise handling of frame notes. 	(load_reg): Likewise. 	(set_reg_plus_d): Likewise. 	(hppa_expand_prologue): Likewise. 	(hppa_expand_epilogue): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49499 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,14 @@
 2002-02-04  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
+	* pa.c (DO_FRAME_NOTES): Move forward.
+	(store_reg): Revise handling of frame notes.
+	(load_reg): Likewise.
+	(set_reg_plus_d): Likewise.
+	(hppa_expand_prologue): Likewise.
+	(hppa_expand_epilogue): Likewise.
+	
+2002-02-04  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
 	* unwind-dw2-fde-glibc.c: Define _GNU_SOURCE if not defined.
 
 2002-02-04  Jakub Jelinek  <jakub@redhat.com>
