--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-04  Richard Henderson  <rth@redhat.com>
+
+	* combine.c (nonzero_bits): Re-introduce special case for
+	sp/fp/ap wrt REGNO_POINTER_ALIGN.
+
 2002-02-05  Aldy Hernandez  <aldyh@redhat.com>
 
         * doc/extend.texi: Warn about unsupported usage of altivec
