* error.c (dump_type): Be more helpful about VECTOR_TYPE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49505 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-05  Jason Merrill  <jason@redhat.com>
+
+	* error.c (dump_type): Be more helpful about VECTOR_TYPE.
+
 2002-02-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* semantics.c (begin_switch_stmt): Clear SWITCH_TYPE.
