--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-04  Adam Megacz <adam@xwt.org>
+
+        * win32-threads.cc: #undef STRICT after gc.h inclusion
+
 2002-02-02  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.in: Rebuilt.
