2002-02-04  Adam Megacz <adam@xwt.org>
        * configure.in: Corrected mingw case branches; added * before
          and after.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49508 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-04  Adam Megacz <adam@xwt.org>
 
+       * configure.in: Corrected mingw case branches; added * before
+         and after.
+
+2002-02-04  Adam Megacz <adam@xwt.org>
+
         * configure.in: Add -lgdi32 -lwsock32 -lws2_32 to libgcj.spec
           if compiling for win32
 
