2002-02-04  Adam Megacz <adam@xwt.org>
        * win32.cc: Created it.
          configure.in: Added PLATFORM_SPECIFIC_SOURCES,
          which is set to posix.cc or win32.cc.
          Makefile.am: Updated it to use $(PLATFORM_SPECIFIC_SOURCES).


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49509 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,12 @@
 2002-02-04  Adam Megacz <adam@xwt.org>
 
+	* win32.cc: Created it.
+	  configure.in: Added PLATFORM_SPECIFIC_SOURCES,
+	  which is set to posix.cc or win32.cc.
+          Makefile.am: Updated it to use $(PLATFORM_SPECIFIC_SOURCES).
+	
+2002-02-04  Adam Megacz <adam@xwt.org>
+
        * configure.in: Corrected mingw case branches; added * before
          and after.
 
