--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-05  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* config/arm/netbsd.h: Correct a comment.
+
 2002-02-05  Aldy Hernandez  <aldyh@redhat.com>
 
         * config/rs6000/rs6000.c (altivec_init_builtins): Fix typo
