--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-04  Richard Henderson  <rth@redhat.com>
+
+	* gcc.c-torture/execute/built-in-setjmp.c: Prototype stuff.
+	(buf): Change to be an array of pointers, not ints.
+
 2002-02-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/Wswitch.c: Fix typos.  Don't return unconditionally
