2002-02-05  Aldy Hernandez  <aldyh@redhat.com>
        * config/rs6000/altivec.h: Fix typos.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49513 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-05  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/altivec.h: Fix typos.
+
 2002-02-05  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* config/arm/netbsd.h: Correct a comment.
