2002-02-05  Aldy Hernandez  <aldyh@redhat.com>
        * gcc.dg/altivec-4.c: AltiVec builtin predicates changed format.
        Fix testcase accordingly.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49515 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-05  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/altivec-4.c: AltiVec builtin predicates changed format.
+        Fix testcase accordingly.
+
 2002-02-04  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/execute/built-in-setjmp.c: Prototype stuff.
