--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-05  Richard Henderson  <rth@redhat.com>
 
+	PR fortran/3393
+	* loop.c (loop_iv_add_mult_emit_before): Copy multiplier as well.
+	(loop_iv_add_mult_sink, loop_iv_add_mult_hoist): Likewise.
+
 	PR fortran/3392
 	* config/mips/mips.c (function_arg): Handle TImode.
 	(function_arg_advance): Likewise.
