--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-05  Andreas Jaeger  <aj@suse.de>
+
+	* crtstuff.c: Fix comments.
+
 2002-02-05  Richard Henderson  <rth@redhat.com>
 
 	PR fortran/3393
