--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-04  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	PR target/5584
+	* config/rs6000/aix.h (UNIQUE_SECTION): Fix use of alloca.
+
 2002-02-02  Richard Henderson  <rth@redhat.com>
 
 	PR opt/5076
