* class.c: Include target.h. (check_bitfield_decl): Disregard EMPTY_FIELD_BOUNDARY, BITFIELDS_NBYTES_LIMITED and PCC_BITFIELD_TYPE_MATTERS for MS bit-field layout. * Make-lang.in: Adjust deps.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49527 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-05  Alexandre Oliva  <aoliva@redhat.com>
+
+	* class.c: Include target.h.
+	(check_bitfield_decl): Disregard EMPTY_FIELD_BOUNDARY,
+	BITFIELDS_NBYTES_LIMITED and PCC_BITFIELD_TYPE_MATTERS for MS
+	bit-field layout.
+	* Make-lang.in: Adjust deps.
+
 2002-02-05  Jason Merrill  <jason@redhat.com>
 
 	* error.c (dump_type): Be more helpful about VECTOR_TYPE.
