--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-05  Phil Edwards  <pme@gcc.gnu.org>
+
+	* configure.in (leb128 support):  Test as versions more carefully.
+	* configure:  Regenerated.
+
 2002-02-04  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	PR target/5584
