--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-05  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	* g77.dg/pr5473.f:  New test
+
 2002-02-05  Aldy Hernandez  <aldyh@redhat.com>
 
         * gcc.dg/altivec-4.c: AltiVec builtin predicates changed format.
