--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-06  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/altivec.h: Change elem to _S_elem.
+
 2002-02-05  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* config/netbsd.h (WCHAR_TYPE): Define.
