* configure.in: Set up PLATFORMOBJS not PLATFORM_SPECIFIC_SOURCES. 	Symlink PLATFORMH to platform.h. 	* Makefile.am (libgcj_la_DEPENDENCIES, libgcj_la_LIBADD): Add 	PLATFORMOBJS. 	* java/lang/natSystem.cc: #include platform.h not posix.h. 	* Makefile.in: Rebuilt with libgcj automake. 	* configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49534 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2002-02-05  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* configure.in: Set up PLATFORMOBJS not PLATFORM_SPECIFIC_SOURCES.
+	Symlink PLATFORMH to platform.h.
+	* Makefile.am (libgcj_la_DEPENDENCIES, libgcj_la_LIBADD): Add
+	PLATFORMOBJS.
+	* java/lang/natSystem.cc: #include platform.h not posix.h.
+	* Makefile.in: Rebuilt with libgcj automake.
+	* configure: Rebuilt.
+
 2002-02-05  Richard Henderson  <rth@redhat.com>
 
 	* Makefile.in: Undo munging last change.
