--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-05  Richard Henderson  <rth@redhat.com>
+
+	* config/sparc/sparc.h (ARG_POINTER_CFA_OFFSET): No stack bias.
+
 2002-02-06  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	Implement using "base addresses" in insn operands as default.
