--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-06  Alexandre Oliva  <aoliva@redhat.com>
+
+	* dbxout.c (dbxout_parms): Apply DEBUGGER_ARG_OFFSET to parameters
+	passed by invisible reference.
+
 2002-02-05  Richard Henderson  <rth@redhat.com>
 
 	* config/sparc/sparc.h (ARG_POINTER_CFA_OFFSET): No stack bias.
